--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,49 @@
                         <label for="email">email</label>
                         <input type="email" class="form-control" id="email" placeholder="Email">
                 </div>
+                <div class="form-group">
+                        <label for="phone">phone</label>
+                        <input type="phone" class="form-control" id="phone" placeholder="Phone">
+                </div>
+                <p>Reason for Inquiry</p>
+                <select class="form-control">
+                        <option>Catering</option>
+                        <option>Private Party</option>
+                        <option>Feedback</option>
+                        <option>Other</option>
+                </select>
+                <p>Have you been to the restaurant?</p>
+                <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                        <label class="form-check-label" for="inlineRadio1">yes</label>
+                </div>
+                <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                        <label class="form-check-label" for="inlineRadio1">no</label>
+                </div>
+                <p>What days are best to contact you?</p>
+                <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                        <label class="form-check-label" for="inlineCheckbox1">M</label>
+                </div>
+                <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                        <label class="form-check-label" for="inlineCheckbox1">T</label>
+                </div>
+                <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                        <label class="form-check-label" for="inlineCheckbox1">W</label>
+                </div>
+                <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                        <label class="form-check-label" for="inlineCheckbox1">TH</label>
+                </div>
+                <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                        <label class="form-check-label" for="inlineCheckbox1">F</label>
+                </div>
+                <br>
+                <input class="btn btn-primary" type="submit" value="Submit">
  
         
         </form>
