--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 
           <hr/>
           
-          <form name="myForm" action="/action_page.php" onsubmit="return validateForm()" method="post" class="text-center">
+          <form name="myForm" onsubmit="return validateForm()" method="post" class="text-center">
                 <div class="form-group">
                         <label for="name">name</label>
                         <input type="name" class="form-control" id="name" placeholder="Name">
